HHH-15528 Add Cockroach to Jenkins nightly test matrix and fix issues